tests/semantic/fail/struct_duplictae_member.c
int main(void) {
  struct S {
    int i;
    int i;
  };
  return 0;
}
